src/assets/styles/page/_authors.scss
.authors{
  .author-title{
    border: none;
    border-bottom: 2px solid #2d3235;
  }
  h2{
    color: #2d3235;
  }

  button{
    border: none;
  }
  .create-form{
    .create-title{
      border-bottom:2px solid black;
      font-weight: 500;
      font-size: 1.3em;
    }
    i{
      font-size: 1.5em;
      cursor: pointer;
    }
    .form-label{
      font-size: 0.8em;
    }
    .form-control{
      border: 2px solid #989898;
      border-radius: 0;
    }
    .btn{
      background-color: #03589b;
    }

  }

}

.author{
  font-weight: 500;

  .author-icon{
    display: none;
    .icon-edit{
      font-size: 130%;
    }
    .icon-edit:hover{
      cursor: pointer;
    }
    .icon-trash-2{
      font-size: 130%;
    }
    .icon-trash-2:hover{
      cursor: pointer;
    }
  }

}
.author:hover{
  background-color: #f5f5f5;
  .author-icon{
    display: block;
  }
}

.create-title{
  color: #00503f;
  border-bottom: 2.25px solid #00503f;
  font-size: 1rem;
}
.warning {
  p {
    margin: 0;
    color: #bf1650;
    font-size: 0.7rem;
  }

  p::before {
    display: inline;
    content: "⚠ ";
  }
}

